[package]
name = "chr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs = { version = "4.5" }
rbatis = { version = "4.5", features = [] }
# rbdc-sqlite = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
#rbdc-pg = { version = "4.5" }
#rbdc-mssql = { version = "4.5" }


#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
getset = "0.1.2"

#log
log = "0.4"
#fast_log enable features = ["lz4", "zip", "gzip"], and edit src/config/log.rs fn choose_packer(),edit application.json5 add log_pack_compress: "zip"
fast_log = { version = "1.7"}

tokio = { version = "1", features = ["macros"] }
axum = {version = "0.7.4",features = ["macros"]}
tower-http = {version = "0.5.2",features = ["fs","cors"]}

#state
state = "0.5.2"

rust-crypto = "^0.2"
